[package]
name = "spl-tollbooth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "spl-tollbooth"
path = "src/main.rs"

[dependencies]
spl-tollbooth-core = { workspace = true }
spl-tollbooth-relayer = { workspace = true }
spl-tollbooth-mpp = { workspace = true }
spl-tollbooth-server = { workspace = true }
solana-pubkey = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-commitment-config = { workspace = true }
solana-signature = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
libsql = { workspace = true }
