[package]
name = "spl-tollbooth-server"
version.workspace = true
edition.workspace = true

[dependencies]
spl-tollbooth-core = { workspace = true }
spl-tollbooth-relayer = { workspace = true }
spl-tollbooth-mpp = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-commitment-config = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
libsql = { workspace = true }
solana-client = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
solana-keypair = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-native-token = { workspace = true }
solana-message = { workspace = true }
solana-system-interface = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
